# bangladesh-location-api

./: .env  .env.example  .gitignore  pyproject.toml
core/: settings.py  urls.py
